...

            if statusModel.isNetPEnabled && statusModel.hasServerInfo && !statusModel.isSnoozing {
                connectionDetails()
            }

            settings()
            about()
        }
        .padding(.top, statusModel.error == nil ? 0 : -20)
        .if(statusModel.animationsOn, transform: {
            $0
                .animation(.easeOut, value: statusModel.hasServerInfo)
                .animation(.easeOut, value: statusModel.shouldShowError)
...
            }
            .padding([.top, .bottom], 2)

            snooze()

        } header: {
            header()
        }
        .increaseHeaderProminence()
        .listRowBackground(Color(designSystemColor: .surface))

        Section {
            if #available(iOS 18.0, *) {
...
