...
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
                    <connections>
                        <outlet property="backButton" destination="I2l-8p-8FW" id="GzO-MF-zzY"/>
                        <outlet property="forwardButton" destination="nKh-Td-FbN" id="kvV-jQ-emv"/>
                        <outlet property="tabsButton" destination="oU2-T4-UCN" id="2Gj-ET-Kpw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
                                    <barButtonItem image="Add" id="W6D-qX-ZGP">
                                        <connections>
                                            <action selector="onAddPressed:" destination="BuT-4g-3wv" id="xaG-oQ-Shb"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Bv6-DF-EOX"/>
                                    <barButtonItem title="Done" id="8fV-rQ-Vp6">
                                        <connections>
                                            <action selector="onDonePressed:" destination="BuT-4g-3wv" id="9Ec-cM-5Nn"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
