...
                                    viewModel: AppTPTrackerDetailViewModel(trackerDomain: tracker.domain),
                                    feedbackModel: feedbackModel
                                )
                            ) {
                                AppTPTrackerCell(trackerDomain: tracker.domain,
                                                 trackerOwner: tracker.trackerOwner,
                                                 trackerCount: tracker.count,
                                                 trackerBlocked: tracker.blocked,
                                                 trackerTimestamp: viewModel.format(timestamp: tracker.timestamp),
                                                 trackerBucket: tracker.bucket,
                                                 debugMode: viewModel.debugModeEnabled,
                                                 imageCache: imageCache,
                                                 showDivider: showDivider)
...
