...
                                                <fontDescription key="fontDescription" name="ProximaNova-Semibold" family="Proxima Nova" pointSize="17"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K5G-OG-RJ7">
                                                <rect key="frame" x="239" y="0.0" width="51" height="31"/>
                                                <accessibility key="accessibilityConfiguration" identifier="privacyProtectionToggle"/>
                                                <color key="onTintColor" red="0.086274509799999996" green="0.3294117647" blue="0.086274509799999996" alpha="1" colorSpace="calibratedRGB"/>
                                                <connections>
                                                    <action selector="toggleProtection" destination="F3n-LI-9p5" eventType="valueChanged" id="5pM-bI-Hcc"/>
                                                </connections>
                                            </switch>
                                        </subviews>
...
